; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp_mov_byte_RM_R.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp_mov_byte_RM_R.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*)* @x86emuOp_mov_byte_RM_R to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x86emuOp_mov_byte_RM_R(%struct.x86emu* %0) #0 {
  %2 = alloca %struct.x86emu*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %2, align 8
  %6 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %7 = call i32 @fetch_decode_modrm(%struct.x86emu* %6)
  %8 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %9 = call i32* @decode_rh_byte_register(%struct.x86emu* %8)
  store i32* %9, i32** %4, align 8
  %10 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %11 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 3
  br i1 %13, label %14, label %22

14:                                               ; preds = %1
  %15 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %16 = call i32 @decode_rl_address(%struct.x86emu* %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @store_data_byte(%struct.x86emu* %17, i32 %18, i32 %20)
  br label %28

22:                                               ; preds = %1
  %23 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %24 = call i32* @decode_rl_byte_register(%struct.x86emu* %23)
  store i32* %24, i32** %3, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %3, align 8
  store i32 %26, i32* %27, align 4
  br label %28

28:                                               ; preds = %22, %14
  ret void
}

declare dso_local i32 @fetch_decode_modrm(%struct.x86emu*) #1

declare dso_local i32* @decode_rh_byte_register(%struct.x86emu*) #1

declare dso_local i32 @decode_rl_address(%struct.x86emu*) #1

declare dso_local i32 @store_data_byte(%struct.x86emu*, i32, i32) #1

declare dso_local i32* @decode_rl_byte_register(%struct.x86emu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
